# heayun-dtu

./: .gitignore  CMakeLists.txt  CMakeLists_backup.txt  CMakeLists_debug.txt  CMakeLists_debug_backup.txt  CMakeLists_full.txt  CMakeLists_original.txt  CMakeLists_simple.txt  LICENSE  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PHASE3_COMPLETION_REPORT.md  PHASE4_COMPLETION_REPORT.md  PROJECT_STATUS.md  README.md  TODO.md  flash.sh  flash_debug.sh  nano100b.ld  nano100b_backup.ld  nano100b_fixed.ld
.cache/clangd/index/: main_old_project_based.c.A102BE9AE6F84FEF.idx  nano100b_reg.h.CAEFE3FDE8662539.idx  nano100b_types.h.F2CC58CFAC7A2B53.idx  startup.c.B28777821E11DA21.idx
cmake/: arm-none-eabi.cmake
docs/: 00-文档导航.md  01-项目概述.md  02-系统架构设计.md  03-OLED调试显示模块.md  04-硬件接口说明.md  05-Mac开发环境搭建.md  06-软件模块详解.md  07-Modbus协议实现.md  08-LoRa通信实现.md  09-数据存储和管理.md  10-配置和参数管理.md  11-错误处理和调试.md  12-API参考手册.md  13-编译和部署指南.md  14-测试和验证指南.md  15-移植和重构指南.md  16-OTA远程升级模块.md  17-AI对话交互模块.md  18-版本历史和更新日志.md  19-新增模块规划总结.md  20-系统重构完成报告.md  21-OLED模块集成完成报告.md  22-MQTT通信模块设计.md  README.md
inc/: 4g.h  TODO.md  adc.h  alarm.h  bluetooth.h  cloud.h  config_manager.h  gpio.h  lora.h  modbus.h  mqtt.h  nano100b_reg.h  nano100b_types.h  oled.h  power.h  sensor.h  storage.h  system.h  uart.h
scripts/: TODO.md  nano100b.cfg
src/app/: TODO.md  alarm.c  config_manager.c  modbus.c  sensor.c  storage.c
src/core/: TODO.md  main.c  main_debug.c  main_fixed_hardware_test.c  main_hardware_test.c  main_minimal_debug.c  main_old_project_based.c  main_oled_test.c  main_simple.c  startup.c  startup_simple.c  system.c  timer.c  watchdog.c
src/drivers/: TODO.md  adc.c  gpio.c  oled.c  oled_fonts.h  oled_ssd1306.c  oled_ssd1306.h  uart.c
src/system/: power.c
src/wireless/: 4g.c  bluetooth.c  lora.c  mqtt.c
tests/: TODO.md  test_runner.c
tests/framework/: unity.c  unity.h
tests/integration/: test_modbus_communication.c
tests/scripts/: run_tests.sh
tests/unit/test_app/: test_modbus.c  test_sensor.c
tests/unit/test_core/: test_system.c
tests/unit/test_drivers/: test_adc.c  test_gpio.c  test_uart.c
